[tool.poetry]
name = "oneml-habitats"
# Handled by `poetry-dynamic-versioning` plugin below.
version = "0.0.0"
description = "oneml plugin component for running pipelines in habitats"
readme = "README.md"
authors = []
packages = [
    {include = "oneml", from = "src/python"},
]

[[tool.poetry.source]]
name = "immunomics-artifacts"
url = "https://pkgs.dev.azure.com/immunomics/_packaging/immunomics-artifacts/pypi/simple"
priority = "default"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "pep440"
bump = true
dirty = false
# This would allow us to publish from PR builds but Azure Devops artifacts lack support:
# https://developercommunity.visualstudio.com/t/local-version-segments-for-python-package-feeds/892057
metadata = false

[tool.poetry.dependencies]
furl = "^2.1.3"
immunodata-core = "*"
immunodata-cli = "*"
immunodata-devops = "*"
immunodata-datasets = "*"
immunodata-workflows = "*"
numpy = "*"
oneml-pipelines = "*"
oneml-processors = "*"
pandas = "*"
python = ">=3.8.10,<3.11"
pandas-stubs = "*"
pyarrow = "^12.0.1"

[tool.poetry.extras]
dev = []

[tool.poetry.group.dev.dependencies]
oneml-devtools = { path = "../oneml-devtools/", develop = true }
oneml-pipelines = { path = "../oneml-pipelines/", develop = true }
oneml-processors = { path = "../oneml-processors/", develop = true }
coverage = "*"
mypy = "*"
pandas-stubs = "*"
pytest = "*"
pytest-cov = "*"
pytest-nunit = "*"
ruff = "*"
setuptools = "*"
types-urllib3 = "*"

[tool.poetry.plugins."immunocli.plugins"]
"oneml-habitats" = "oneml.habitats.immunocli:OnemlHabitatsCliPlugin.factory"

[tool.poetry.plugins."oneml.app_plugins"]
"oneml.habitats-plugin" = "oneml.habitats.plugin:OnemlHabitatsPlugin"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
packages = ["oneml", "oneml_test"]
cache_dir = "../.tmp/oneml-habitats/.mypy_cache"
namespace_packages = true
mypy_path = "src/python/:test/python/"
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
# Disabling this check, it fails if we subclass untyped classes (luigi.Task)
disallow_subclassing_any = false
warn_no_return = true
strict_optional = true
strict_equality = true
no_implicit_optional = true
disallow_any_generics = true
disallow_any_unimported = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unused_configs = true
show_traceback = true
show_error_codes = true
show_column_numbers = true

[[tool.mypy.overrides]]
module = [
    "pydot.*",
    "furl.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pulumi_azure_native.*"
ignore_missing_imports = true
follow_imports = "skip"

[tool.ruff]
cache-dir = "../.tmp/oneml-habitats/.ruff_cache"
include = ["src/python", "test/python", "pyproject.toml"]
line-length = 99
indent-width = 4
target-version = "py310"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# B026: Star-arg unpacking after a keyword argument is strongly discouraged
# D100: Missing docstring in public module
# D101: Missing docstring in public class
# D102: Missing docstring in public method
# D103: Missing docstring in public function
# D104: Missing docstring in public package
# D105: Missing docstring in magic method
# D107: Missing docstring in __init__
# D417: Missing argument descriptions in Docstrings
# E203: Whitespace before ':'
# E501: Line too long ({width} > {limit})
select = ["B", "D", "E", "F", "I", "Q", "W", "NPY", "PD", "PTH", "RUF", "UP"]
ignore = ["B026", "D100", "D101", "D102", "D103", "D104", "D105", "D107", "D417", "E203", "E501"]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

 # Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.per-file-ignores]
"test/*" = ["F401"]  # unused-import

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["oneml", "oneml_test"]

[tool.ruff.format]
quote-style = "double"  # Like Black, use double quotes for strings.
indent-style = "space"  # Like Black, indent with spaces, rather than tabs.
skip-magic-trailing-comma = false  # Like Black, respect magic trailing commas.
line-ending = "auto"  # Like Black, automatically detect the appropriate line ending.

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
docstring-code-format = true

[tool.coverage.run]
branch = true
data_file = "../.tmp/oneml-habitats/.coverage"
# Root namespace package folder here ensures coverage will include files with 0% coverage
source = ["src/python/oneml"]
relative_files = true

[tool.coverage.report]
show_missing = true

[tool.coverage.xml]
output = "../.tmp/oneml-habitats/reports/coverage.xml"

[tool.pytest.ini_options]
cache_dir = "../.tmp/oneml-habitats/.pytest_cache"
testpaths = ["test/python"]
addopts = """
    --cov --cov-report=term
    --cov-report=xml
    --junit-xml ../.tmp/oneml-habitats/reports/pytest-junit.xml
    --capture=no
    --cache-clear
"""
